[gd_scene load_steps=14 format=3 uid="uid://dktp5qrifskk8"]

[ext_resource type="Texture2D" uid="uid://d2jrd58i6dv6l" path="res://Assets/BGOff.png" id="1_iukft"]
[ext_resource type="Script" uid="uid://dmfnsa2ivx71p" path="res://Scenes/Game.gd" id="1_kldst"]
[ext_resource type="Texture2D" uid="uid://b8r1v2n46v517" path="res://Assets/Lights Off.png" id="2_gl6un"]
[ext_resource type="Texture2D" uid="uid://bqbs2rnmefpdd" path="res://Assets/Reset.png" id="4_3so38"]
[ext_resource type="Texture2D" uid="uid://o4f51yc5ethd" path="res://Assets/Restart.png" id="4_b2bpf"]
[ext_resource type="Texture2D" uid="uid://ic58lkjpg2dd" path="res://Assets/Next.png" id="6_fgofq"]
[ext_resource type="Texture2D" uid="uid://dgjmnp8jfmmax" path="res://Assets/BackButton.png" id="7_3so38"]
[ext_resource type="Texture2D" uid="uid://dxcbinq8t1rw5" path="res://Assets/submenu.png" id="7_fgofq"]
[ext_resource type="Texture2D" uid="uid://w1mt7jiewrvd" path="res://Assets/GameOver.png" id="8_bf53h"]
[ext_resource type="Texture2D" uid="uid://b6lgdjv0leqq3" path="res://Assets/TryAgain.png" id="9_71axn"]
[ext_resource type="Texture2D" uid="uid://u5rxaipwab2r" path="res://Assets/PauseButton.png" id="10_dahhg"]
[ext_resource type="Texture2D" uid="uid://dmyebwojeuqp7" path="res://Assets/PlayButton.png" id="11_3so38"]

[sub_resource type="LabelSettings" id="LabelSettings_7lihs"]
font_size = 45

[node name="Game" type="Node2D"]
script = ExtResource("1_kldst")

[node name="Background" type="TextureRect" parent="."]
offset_right = 599.0
offset_bottom = 900.0
texture = ExtResource("1_iukft")
expand_mode = 1

[node name="CeilingLight" type="TextureRect" parent="."]
offset_left = 261.0
offset_top = 151.0
offset_right = 351.0
offset_bottom = 284.0
texture = ExtResource("2_gl6un")
expand_mode = 1

[node name="GridHolder" type="Node2D" parent="."]
position = Vector2(297, 430)
scale = Vector2(0.7, 0.7)

[node name="TimerLabel" type="Label" parent="."]
offset_left = 480.0
offset_top = 7.0
offset_right = 595.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 66
text = "00:00"
label_settings = SubResource("LabelSettings_7lihs")

[node name="MenuButton" type="TextureButton" parent="."]
offset_right = 610.0
offset_bottom = 409.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_fgofq")

[node name="SubmenuPopup" type="PanelContainer" parent="."]
offset_left = 9.0
offset_top = 64.0
offset_right = 619.0
offset_bottom = 473.0
scale = Vector2(0.3, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="SubmenuPopup"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="TextureButton" parent="SubmenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_3so38")
stretch_mode = 5

[node name="RestartButton" type="TextureButton" parent="SubmenuPopup/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_b2bpf")

[node name="GameOverPopup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleImage" type="TextureRect" parent="GameOverPopup"]
layout_mode = 0
offset_left = 70.0
offset_top = 182.0
offset_right = 519.0
offset_bottom = 417.0
texture = ExtResource("8_bf53h")
expand_mode = 1

[node name="TryAgainButton" type="TextureButton" parent="GameOverPopup"]
layout_mode = 0
offset_left = 152.0
offset_top = 455.0
offset_right = 762.0
offset_bottom = 864.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_71axn")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 516.0
offset_top = 64.0
offset_right = 585.0
offset_bottom = 128.0
texture_normal = ExtResource("10_dahhg")
texture_pressed = ExtResource("11_3so38")
ignore_texture_size = true
stretch_mode = 0

[node name="WinPopup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MessageImage" type="TextureRect" parent="WinPopup"]
layout_mode = 0
offset_left = 79.0
offset_top = 310.0
offset_right = 553.0
offset_bottom = 416.0

[node name="HBoxContainer" type="HBoxContainer" parent="WinPopup"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.78
anchor_right = 0.11
offset_left = 214.2
offset_top = 589.0
offset_right = 1175.6
offset_bottom = 1083.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.26, 0.26)
theme_override_constants/separation = 400

[node name="ReplayButton" type="TextureButton" parent="WinPopup/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.57
texture_normal = ExtResource("4_3so38")
stretch_mode = 3

[node name="NextButton" type="TextureButton" parent="WinPopup/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_fgofq")
stretch_mode = 3
